--- a/reports/final_report.tex
+++ b/reports/final_report.tex
@@ -36,7 +36,7 @@ This project aims to reproduce the corporate bond decile portfolios sorted by yi
 While He, Kelly, and Manela (HKM) originally span 1970--2012, the duration‐matched Treasury dataset starts in 2002 and continues through 2023. Consequently, the only overlapping interval between the HKM dataset and Nozawa’s updated duration‐matched data is roughly 2002--2012, restricting our replication to that period.
 
 \subsection{Data Coverage and Challenges}
-We observed that no corporate bonds had a corresponding yield in the first available month (August 2002) to compare with the duration-matched Treasury yield, so we started our replication from September 2002 onward. In other months, missing yield data occurred because some bonds had no trading volume; we were unable to calculate yields for those bonds given the limited methodological guidance in the literature. Forward-filling the yields did not help; it in fact made our replication worse. Additionally, some bonds exhibited negative amounts outstanding, which required data cleaning. As a result, while the replicated portfolios follow the overall direction and trend of the benchmark from 2002 to 2012, exact numerical matching was not achieved.
+We observed that no corporate bonds had a corresponding yield in the first available month (August 2002) to compare with the duration-matched Treasury yield, so we started our replication from September 2002 onward. Unfortunately, we lacked access to the Moody's Default Risk Service to ensure that the price observations upon default are complete, which means we will miss bond defaults that occur during the sample period. Additionally, some bonds exhibited negative amounts outstanding, which required data cleaning. As a result, while the replicated portfolios follow the overall direction and trend of the benchmark from 2002 to 2012, exact numerical matching was not achieved.
 
 \section{Methodology}
 \subsection{Yield Spread Calculation}
